# plotvideos

./: .cursorrules  .gitignore  Dockerfile  README.md  docker-compose.yml  insert.sql  pyproject.toml  requirements.txt  small.txt  start.sh  steps.md  tiny.txt  turbo.txt
crawler/: Dockerfile  README.md  api.py  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml  scheduler.py
crawler/core/: config.py  consts.py  enums.py  languages.py  models.py  schemas.py
crawler/crud/: keyword_crud.py  language_crud.py  term_crud.py  video_crud.py  video_title_translation_crud.py
crawler/lib/: config.py  connection.py  enums.py  models.py  schemas.py
crawler/scripts/json/: info-56.json  rapidapi-response.json  websites.json
crawler/scripts/python/: migrate_video_dirs_to_id_layout.py  retranscribe.py  thumbnail_download.py  thumbnail_download_empty.py  thumbnail_extract.py  translate_vtt.py
crawler/scripts/sql/: drop_videos_author_name_url.sql  expand_videos_text_columns.sql  set-updated_at_different.sql
crawler/service/: s1_fetch.py  s2_download.py  s3_convert.py  s4_subtitle.py  s5_translate_vtt.py  s6_translate_meta.py  s7_hls.py  s7_upload.py  s8_cleanup.py  s9_publish.py
crawler/src/: api.py  main.py  pipeline.py  run_api.py  scheduler.py
crawler/src/core/: config.py  connection.py  consts.py  enums.py  languages.py  models.py  path_layout.py  schemas.py  workdirs.py
crawler/src/crawler/: __init__.py  api.py
crawler/src/crawler/core/: config.py  connection.py  models.py  schemas.py
crawler/src/crawler/crud/: term_crud.py
crawler/src/crawler/service/: s2_download.py  s3_convert.py  s4_subtitle.py  s6_translate_meta.py  s7_hls.py  s8_upload.py
crawler/src/crawler/utils/: download_utils.py  llm_utils.py  (+3 more)
crawler/src/crud/: keyword_crud.py  language_crud.py  term_crud.py  video_crud.py  video_title_translation_crud.py
crawler/src/lib/: config.py  connection.py  consts.py  enums.py  models.py  schemas.py
crawler/src/service/: s1_fetch.py  s2_download.py  s3_convert.py  s4_subtitle.py  s5_translate_vtt.py  s6_translate_meta.py  s7_hls.py  s8_upload.py  s9_cleanup.py
crawler/src/utils/: b2_utils.py  bunny_utils.py  download_utils.py  file_utils.py  llm_utils.py  log_utils.py  media_utils.py  mlx_whisper_utils.py  nllb_utils.py  process_lock.py  string_utils.py  telegram_notify.py  translate_utils.py  uvicorn_log_config.py  vtt_utils.py  whisper_utils.py
crawler/tests/: __init__.py
crawler/tests/utils/: test_azure_stt_utils.py  test_azure_tts_subtitle.py  test_download_utils.py  test_file_utils.py  test_llm_utils.py  test_s5_translate_vtt.py  test_string_utils.py  test_vtt_utils.py  test_whisper_utils.py
crawler/utils/: b2_utils.py  bunny_utils.py  download_utils.py  file_utils.py  id_utils.py  llm_utils.py  log_utils.py  media_utils.py  mlx_whisper_utils.py  nllb_utils.py  signal_utils.py  translate_utils.py  video_ad_utils.py  whisper_utils.py
(+217 files in other folders)
