[project]
name = "wuse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-cognitiveservices-speech==1.44.0",
    "boto3>=1.38.32",
    "ctranslate2>=4.6.0",
    "faster-whisper>=1.1.1",
    "fasttext==0.9.3",
    "ffmpeg-python==0.2.0",
    "loguru==0.7.3",
    "mlx-whisper>=0.4.2",
    "numpy==1.26.4",
    "psycopg2-binary>=2.9.10",
    "pydantic==2.11.5",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.41",
    "tenacity==9.1.2",
    "tiktoken>=0.9.0",
    "torch>=2.7.1",
    "webvtt-py>=0.5.1",
    "yt-dlp==2025.6.9",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
