[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
py-modules = ["api", "main", "scheduler"]

[project]
name = "wuse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "b2sdk>=1.32.0",
    "fastapi>=0.115.0",
    "faster-whisper==1.2.1",
    "ffmpeg-python==0.2.0",
    "loguru==0.7.3",
    "psycopg2-binary==2.9.10",
    "pydantic==2.11.5",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.41",
    "tenacity==9.1.2",
    "tiktoken>=0.9.0",
    "slowapi==0.1.9",
    "uvicorn[standard]>=0.34.0",
    "stt2vtt>=0.0.5",
    "webvtt-py>=0.5.1",
    "yt-dlp==2026.3.17",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
